getUserFav swagger
