# docs/swagger.json
@@ -104,6 +104,196 @@
           }
         }
       }
+    },
+    "/plants/own": {
+      "get": {
+        "tags": [
+          "Plants"
+        ],
+        "summary": "Get user's own plants (private)",
+        "operationId": "getOwnPlants",
+        "description": "Returns a list of all plants created by a user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "growthForm",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "enum": [
+                "tree",
+                "shrub",
+                "herb",
+                "grass",
+                "vine",
+                "succulent",
+                "fern",
+                "moss"
+              ]
+            },
+            "description": "Filter plants by growth form"
+          },
+          {
+            "name": "origin",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "enum": [
+                "wild",
+                "cultivated"
+              ]
+            },
+            "description": "Filter plant by origin"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully fetched plant list",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/plant"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/plants/favorites": {
+      "get": {
+        "tags": [
+          "Plants"
+        ],
+        "summary": "Get a list of user's favorite plants' ids (private)",
+        "operationId": "getFavPlants",
+        "description": "Returns a list of ids of plants that users marked as favorites",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Here's you list of favorites",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "string",
+                        "format": "mongo-ObjectId",
+                        "example": "68ac425c67bf894ba7634759"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/plants/{id}": {
+      "get": {
+        "tags": [
+          "Plants"
+        ],
+        "summary": "Get a plant by ID",
+        "operationId": "getId",
+        "description": "Returns info about a single plant created by the user, based on its unique identifier.",
+        "security": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "Unique identifier of the plant",
+            "schema": {
+              "type": "string",
+              "pattern": "^[a-fA-F0-9]{24}$",
+              "example": "665123abc321cc0011aa23ef"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Plant with this is here",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Plant with this is here"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/plant"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -158,6 +348,69 @@
           },
           "userId": {
             "type": "string"
+          }
+        }
+      }
+    },
+    "responses": {
+      "401": {
+        "description": "UnauthorizedError",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "UnauthorizedError"
+                },
+                "data": {
+                  "type": "object",
+                  "required": [
+                    "message"
+                  ],
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Session is not found."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "500": {
+        "description": "Internal Server Error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 500
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Internal Server Error"
+                }
+              }
+            }
           }
         }
       }
